[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/root/components/load_save_dialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/root/components/confirm_dialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/root/components/dialog_manager.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.627451 )
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="DialogManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmDialog" parent="." instance=ExtResource( 4 )]
margin_right = 838.0
margin_bottom = 444.0

[node name="FileDialog" parent="." instance=ExtResource( 3 )]
filters = PoolStringArray( "*.tpgn" )
